fix autologout on second time