@@ -139,9 +139,6 @@ run {
     ])
 
     jvmArgs.addAll([
-            /*'--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED',
-            '--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED',
-            '--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',*/
             '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
     ])
 }
